fixed social icon alignment

--- a/style.css
+++ b/style.css
@@ -271,6 +271,7 @@ footer {
 
 .footer-social{
   display: inline-block;
+  padding-top: 0.6rem;
 }
 
 @media screen and (max-width: 992px) {
